[project]
name = "sofa_sentry"
version = "1.0.0"
description = "Raspberry pi controlled water turret for fending off cats peeing on the sofa."
authors = [
    {name = "Robin Yuen Shing Hei", email = "robin.ysh@gmail.com"},
]
dependencies = [
    "gpiozero>=2.0.1",
    "onnxruntime>=1.22.0",
    "onnxslim>=0.1.57",
    "picamera2>=0.3.27",
    "rpi-hardware-pwm>=0.3.0",
    "rpi-kms>=0.1a1",
    "rpi-lgpio>=0.6",
    "rpi-libcamera>=0.1a10",
    "typer>=0.15.3",
    "ultralytics[export]>=8.3.150",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "icecream>=2.1.3",
    "tqdm>=4.65.0",
    "flake8>=6.0.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "autoflake>=2.2.0",
    "pylint>=2.17.5",
    "yq>=3.2.3",
    "pre-commit>=4.2.0",
]

[project.scripts]
start = "sofa_sentry.main:main"

[tool.uv]
override-dependencies = [
    "tensorflow-decision-forests; sys_platform == 'never'",
]
package=true

[tool.pylint]
messages_control.disable = "logging-fstring-interpolation,unspecified-encoding"
max-line-length = "88" # black max value

[tool.ruff]
ignore = [
    "E501",
    "PGH004"
]
